# structured_light

./: mkdocs.yml  objects.inv  pyproject.toml
docs/: README.md  reference.md  tutorials.md
site/: 404.html  index.html
site/explanation/: index.html
site/reference/: index.html
structured_light/: __init__.py  structures.py
structured_light/linear_combination/: linear_combination_2.py  linear_combination_3.py
tests/: test_structures.py
tutorials/: index.html
